Add: Some domain models, services, controller templates and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 
+com.commerce.sn_monitor.data_resolver_api_token = "YOUR API TOKEN" 
+com.commerce.sn_monitor.data_resolver_endpoint = "https://suggestions.dadata.ru/suggestions/api/4_1/rs/"
+# you can use other data resolve services
