Add: cred encoding and endpoint property

--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -2,3 +2,4 @@ com.commerce.sn-monitor.data-resolver.api-token = "YOUR_TOKEN"
 com.commerce.sn-monitor.data-resolver.endpoint = "https://suggestions.dadata.ru/suggestions/api/4_1/rs"
 com.commerce.sn-monitor.delivery-service.login = "YOUR_LOGIN"
 com.commerce.sn-monitor.delivery-service.password = "YOUR_PASSWORD"
+com.commerce.sn-monitor.delivery-service.endpoint = "http://api.iml.ru/Json"
