--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -1,5 +1,5 @@
 com.commerce.sn-monitor.data-resolver.api-token = "YOUR_TOKEN"
 com.commerce.sn-monitor.data-resolver.endpoint = "https://suggestions.dadata.ru/suggestions/api/4_1/rs"
-com.commerce.sn-monitor.delivery-service.login = "YOUR_LOGIN"
-com.commerce.sn-monitor.delivery-service.password = "YOUR_PASSWORD"
-com.commerce.sn-monitor.delivery-service.endpoint = "http://api.iml.ru/Json"
+com.commerce.sn-monitor.delivery-service.iml.login = "YOUR_LOGIN"
+com.commerce.sn-monitor.delivery-service.iml.password = "YOUR_PASSWORD"
+com.commerce.sn-monitor.delivery-service.iml.endpoint = "http://api.iml.ru/Json"
