Modify: to hell with dependency inversion when it is over-engineering

--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -3,3 +3,4 @@ com.commerce.sn-monitor.data-resolver.endpoint = "https://suggestions.dadata.ru/
 com.commerce.sn-monitor.delivery-service.iml.login = "YOUR_LOGIN"
 com.commerce.sn-monitor.delivery-service.iml.password = "YOUR_PASSWORD"
 com.commerce.sn-monitor.delivery-service.iml.endpoint = "http://api.iml.ru/Json"
+com.commerce.sn-monitor.delivery-service.iml.voc_endpoint = "http://list.iml.ru/"
