Add: request mapping for cdek status request, adjustment due to debug of iml request

--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -1,6 +1,13 @@
-com.commerce.sn-monitor.data-resolver.api-token = "YOUR_TOKEN"
-com.commerce.sn-monitor.data-resolver.endpoint = "https://suggestions.dadata.ru/suggestions/api/4_1/rs"
-com.commerce.sn-monitor.delivery-service.iml.login = "YOUR_LOGIN"
-com.commerce.sn-monitor.delivery-service.iml.password = "YOUR_PASSWORD"
-com.commerce.sn-monitor.delivery-service.iml.endpoint = "http://api.iml.ru/Json"
-com.commerce.sn-monitor.delivery-service.iml.voc_endpoint = "http://list.iml.ru/"
+com.commerce.sn-monitor.data-resolver.api-token = YOUR_TOKEN
+com.commerce.sn-monitor.data-resolver.endpoint = https://suggestions.dadata.ru/suggestions/api/4_1/rs
+
+com.commerce.sn-monitor.delivery-service.iml.login = YOUR_LOGIN
+com.commerce.sn-monitor.delivery-service.iml.password = YOUR_PASSWORD
+com.commerce.sn-monitor.delivery-service.iml.endpoint = http://api.iml.ru/Json
+com.commerce.sn-monitor.delivery-service.iml.voc_endpoint = http://list.iml.ru
+
+com.commerce.sn-monitor.delivery-service.cdek.endpoint = https://api.cdek.ru/v2
+com.commerce.sn-monitor.delivery-service.cdek.token_grant_type = client_credentials
+com.commerce.sn-monitor.delivery-service.cdek.client_id = YOUR_ID
+com.commerce.sn-monitor.delivery-service.cdek.client_secret = YOUR_SECRET
+
