CDEK endpoint fix

--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -6,7 +6,7 @@ com.commerce.sn-monitor.delivery-service.iml.password = YOUR_PASSWORD
 com.commerce.sn-monitor.delivery-service.iml.endpoint = http://api.iml.ru/Json
 com.commerce.sn-monitor.delivery-service.iml.voc_endpoint = http://list.iml.ru
 
-com.commerce.sn-monitor.delivery-service.cdek.endpoint = https://api.cdek.ru/v2
+com.commerce.sn-monitor.delivery-service.cdek.endpoint = http://api.edu.cdek.ru/v2
 com.commerce.sn-monitor.delivery-service.cdek.token_grant_type = client_credentials
 com.commerce.sn-monitor.delivery-service.cdek.client_id = YOUR_ID
 com.commerce.sn-monitor.delivery-service.cdek.client_secret = YOUR_SECRET
