--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -4,7 +4,7 @@ com.commerce.sn-monitor.data-resolver.endpoint = https://suggestions.dadata.ru/s
 com.commerce.sn-monitor.delivery-service.iml.login = YOUR_LOGIN
 com.commerce.sn-monitor.delivery-service.iml.password = YOUR_PASSWORD
 com.commerce.sn-monitor.delivery-service.iml.endpoint = http://api.iml.ru/Json
-com.commerce.sn-monitor.delivery-service.iml.voc_endpoint = http://list.iml.ru
+com.commerce.sn-monitor.delivery-service.iml.voc_endpoint = http://api-test.iml.ru/list
 
 com.commerce.sn-monitor.delivery-service.cdek.endpoint = http://api.edu.cdek.ru/v2
 com.commerce.sn-monitor.delivery-service.cdek.token_grant_type = client_credentials
